--- a/CGA/index.html
+++ b/CGA/index.html
@@ -121,6 +121,7 @@
                                 </li>
                             </ul>
                         </div>
+                        <a href="#">登入/註冊</a>
                     </div>
                 </div>
             </div>
@@ -129,7 +130,7 @@
 
     <section class="container">
         <div class="row">
-            
+
             <div class="yt">
                 <h2>成廣澳youtuber影片介紹</h2>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/WA7GEXVGAP0"
@@ -140,12 +141,139 @@
         </div>
     </section>
 
-    <section class="container">
-        <div class="row">
-            
+    <section class="container ">
+        <div class="row cga-description">
+            <h2>成廣澳數位共和國</h2>
+            <div class="col-12 col-md-6 align-self-center">
+                <h3>成廣澳數位共和國，和你一起偽出國</h3>
+                <p>
+                    台東縣的台11線東河至長濱一帶，自古以來便因其沿海頻繁的商業往返與碼頭交流的地域發展特色形成「成廣澳聚落」，過去曾是相當興盛的商業重鎮，然而隨著時代的發展，在地許多富含歷史人文、自然風貌與豐盛的物產，都受時空的囿限，讓其產業經濟的興起，受到阻礙。因此我們希望串連在地知名的農林漁牧、餐廳、旅宿服務業者，發行數位觀光護照成廣澳數位共和國Passport！發揚光大台11線的人文歷史以及重興過去繁榮的商業景象，體驗台11線上長濱、成功、東河的山海魅力！
+                </p>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="pic">
+                    <img src="./img/2022092810355630430119.jpeg" alt="成廣澳數位共和國，和你一起偽出國">
+                </div>
+            </div>
         </div>
     </section>
 
+    <section class="container">
+        <div class="row cga-fun">
+            <h2>成廣澳遊程</h2>
+            <div class="col-6 col-md-3 mb-4">
+                <div class="card">
+                    <div class="txt">
+                        <h3>泰北半日遊</h3>
+                        <a href="#">See More <i class="fas fa-angle-right"></i></a>
+                    </div>
+                    <div class="pic">
+                        <img src="./img/2022090811315313300040.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-3 mb-4">
+                <div class="card">
+                    <div class="txt">
+                        <h3>長成一日遊</h3>
+                        <a href="#">See More <i class="fas fa-angle-right"></i></a>
+                    </div>
+                    <div class="pic">
+                        <img src="./img/2022090811312799530027.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-3 mb-4">
+                <div class="card">
+                    <div class="txt">
+                        <h3>成廣澳三日自由行</h3>
+                        <a href="#">See More <i class="fas fa-angle-right"></i></a>
+                    </div>
+                    <div class="pic">
+                        <img src="./img/2022090811305082550127.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-3 mb-4">
+                <div class="card">
+                    <div class="txt">
+                        <h3>一定要成功玩食一日遊</h3>
+                        <a href="#">See More <i class="fas fa-angle-right"></i></a>
+                    </div>
+                    <div class="pic">
+                        <img src="./img/2022090811301449030047.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="stamp-list">
+                <div class="stamp">
+                    <img src="./img/2022090812261451770092.jpg" alt="">
+                </div>
+                <div class="stamp">
+                    <img src="./img/2022091410223870480071.jpg" alt="">
+                </div>
+                <div class="stamp">
+                    <img src="./img/2022091410225573630165.jpg" alt="">
+                </div>
+                <div class="stamp">
+                    <img src="./img/2022091410231721190113.jpg" alt="">
+                </div>
+                <div class="stamp">
+                    <img src="./img/2022091410234796990045.jpg" alt="">
+                </div>
+                <div class="stamp">
+                    <img src="./img/2022091410240931810185.jpg" alt="">
+                </div>
+                <div class="stamp">
+                    <img src="./img/2022091410242446650067.jpg" alt="">
+                </div>
+                <div class="stamp">
+                    <img src="./img/2022091410243912860103.jpg" alt="">
+                </div>
+                <div class="stamp">
+                    <img src="./img/2022091410245448440213.jpg" alt="">
+                </div>
+                <div class="stamp">
+                    <img src="./img/2022091410250884110170.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+    <section class="container-fluid main-footer">
+        <div class="container">
+
+            <div class="row">
+                <h2>成廣澳相關資訊</h2>
+                <div class="info">
+                    <div class="col-6 col-md-3 text-center text-md-start">
+                        <h3>購物說明</h3>
+                        <ul>
+
+                            <li><a href="#">隱私政策</a></li>
+                            <li><a href="#">服務條款</a></li>
+                            <li><a href="#">退換貨方式</a></li>
+                            <li><a href="#">會員權益</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-md-3 text-center text-md-start">
+                        <h3>客服資訊</h3>
+                        <ul>
+                            <li><a href="#">常見問題</a></li>
+                            <li><a href="#">聯絡我們</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+    <div class="copyright">
+        Copyright &copy 2022 <span>成廣澳數位共和國</span> All Rights Reserved.
+    </div>
     <span class="go-top fade-out "><i class="fas fa-angle-up"></i></span>
 </body>
 
