--- a/CGA/index.html
+++ b/CGA/index.html
@@ -271,9 +271,11 @@
 
         </div>
     </section>
-    <div class="copyright">
-        Copyright &copy 2022 <span>成廣澳數位共和國</span> All Rights Reserved.
-    </div>
+    <section class="copyright">
+        <h2>
+            Copyright &copy 2022 <span>成廣澳數位共和國</span> All Rights Reserved.
+        </h2>
+    </section>
     <span class="go-top fade-out "><i class="fas fa-angle-up"></i></span>
 </body>
 
