--- a/CGA/product.html
+++ b/CGA/product.html
@@ -123,10 +123,142 @@
         </div>
     </header>
 
+    <section class="container">
+        <div class="row main-page">
+            <div class="col-12 col-md-2 ">
+                <ul class="shop-list">
+                    <li class="active">
+                        <a href="#">全部</a>
+                    </li>
+                    <li>
+                        <a href="#">長濱一號</a>
+                    </li>
+                    <li>
+                        <a href="#">祥銓農創</a>
+                    </li>
+                    <li>
+                        <a href="#">泰源幽谷彌米</a>
+                    </li>
+                    <li>
+                        <a href="#">柚子藝術工坊</a>
+                    </li>
+                    <li>
+                        <a href="#">頑菓子農場</a>
+                    </li>
+                    <li>
+                        <a href="#">旭海民宿</a>
+                    </li>
+                    <li>
+                        <a href="#">飛行員餐車</a>
+                    </li>
+                    <li>
+                        <a href="#">佳濱成功旗魚</a>
+                    </li>
+                    <li>
+                        <a href="#">86水產</a>
+                    </li>
+                    <li>
+                        <a href="#">益頂味肉品</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-12 col-md-10">
+                <div class="shop">
+                    <h2>商家名稱</h2>
+                    <div class="shop-banner">
+                        <img src="./img/2022090818042545060187.jpg" alt="">
+                    </div>
+                    <div class="shop-products">
+                        <a href="#" class="product">
+                            <h3>商品</h3>
+                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="product-price">
+                                  $<span class="price">250</span>
+                            </div>
+                        </a>
+                        <a href="#" class="product">
+                            <h3>商品</h3>
+                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="product-price">
+                                $<span class="price">250</span>
+                            </div>
+                        </a>
+                        <a href="#" class="product">
+                            <h3>商品</h3>
+                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="product-price">
+                                  $<span class="price">250</span>
+                            </div>
+                        </a>
+                        <a href="#" class="product">
+                            <h3>商品</h3>
+                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="product-price">
+                                  $<span class="price">250</span>
+                            </div>
+                        </a>
+                        <a href="#" class="product">
+                            <h3>商品</h3>
+                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="product-price">
+                                  $<span class="price">250</span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="shop">
+                    <h2>商家名稱</h2>
+                    <div class="shop-banner">
+                        <img src="./img/2022090818042545060187.jpg" alt="">
+                    </div>
+                    <div class="shop-products">
+                        <div class="product">
+                            <h3>商品</h3>
+                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="product-price">
+                                  $<span class="price">250</span>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <h3>商品</h3>
+                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="product-price">
+                                $<span class="price">250</span>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <h3>商品</h3>
+                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="product-price">
+                                  $<span class="price">250</span>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <h3>商品</h3>
+                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="product-price">
+                                  $<span class="price">250</span>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <h3>商品</h3>
+                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="product-price">
+                                  $<span class="price">250</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <section class="container-fluid main-footer">
+
+
+
+
+    <footer class="container-fluid main-footer">
         <div class="container">
-
             <div class="row">
                 <h2>成廣澳相關資訊</h2>
                 <div class="info">
@@ -150,9 +282,8 @@
                 </div>
 
             </div>
-
         </div>
-    </section>
+    </footer>
     <section class="copyright">
         <h2>
             Copyright &copy 2022 <span>成廣澳數位共和國</span> All Rights Reserved.
