--- a/CGA/index.html
+++ b/CGA/index.html
@@ -71,34 +71,34 @@
                                     class="fas fa-angle-up"></i></label>
                             <ul class="road-shop-list">
                                 <li>
-                                    <a href="#">長濱一號</a>
+                                    <a href="./product.html">長濱一號</a>
                                 </li>
                                 <li>
-                                    <a href="#">祥銓農創</a>
+                                    <a href="./product.html">祥銓農創</a>
                                 </li>
                                 <li>
-                                    <a href="#">泰源幽谷彌米</a>
+                                    <a href="./product.html">泰源幽谷彌米</a>
                                 </li>
                                 <li>
-                                    <a href="#">柚子藝術工坊</a>
+                                    <a href="./product.html">柚子藝術工坊</a>
                                 </li>
                                 <li>
-                                    <a href="#">頑菓子農場</a>
+                                    <a href="./product.html">頑菓子農場</a>
                                 </li>
                                 <li>
-                                    <a href="#">旭海民宿</a>
+                                    <a href="./product.html">旭海民宿</a>
                                 </li>
                                 <li>
-                                    <a href="#">飛行員餐車</a>
+                                    <a href="./product.html">飛行員餐車</a>
                                 </li>
                                 <li>
-                                    <a href="#">佳濱成功旗魚</a>
+                                    <a href="./product.html">佳濱成功旗魚</a>
                                 </li>
                                 <li>
-                                    <a href="#">86水產</a>
+                                    <a href="./product.html">86水產</a>
                                 </li>
                                 <li>
-                                    <a href="#">益頂味肉品</a>
+                                    <a href="./product.html">益頂味肉品</a>
                                 </li>
 
                             </ul>
@@ -241,7 +241,7 @@
     </section>
 
 
-    <section class="container-fluid main-footer">
+    <footer class="container-fluid main-footer">
         <div class="container">
 
             <div class="row">
@@ -269,7 +269,7 @@
             </div>
 
         </div>
-    </section>
+    </footer>
     <section class="copyright">
         <h2>
             Copyright &copy 2022 <span>成廣澳數位共和國</span> All Rights Reserved.
