--- a/CGA/product.html
+++ b/CGA/product.html
@@ -171,37 +171,47 @@
                     <div class="shop-products">
                         <a href="#" class="product">
                             <h3>商品</h3>
-                            <img src="./img/2022090811305082550127.jpg" alt="">
-                            <div class="product-price">
-                                  $<span class="price">250</span>
+                            <div class="pic">
+                                <img src="./img/2022090811305082550127.jpg" alt="">
                             </div>
-                        </a>
-                        <a href="#" class="product">
-                            <h3>商品</h3>
-                            <img src="./img/2022090811305082550127.jpg" alt="">
                             <div class="product-price">
                                 $<span class="price">250</span>
                             </div>
                         </a>
                         <a href="#" class="product">
                             <h3>商品</h3>
-                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="pic">
+                                <img src="./img/2022090811305082550127.jpg" alt="">
+                            </div>
                             <div class="product-price">
-                                  $<span class="price">250</span>
+                                $<span class="price">250</span>
                             </div>
                         </a>
                         <a href="#" class="product">
                             <h3>商品</h3>
-                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="pic">
+                                <img src="./img/2022090811305082550127.jpg" alt="">
+                            </div>
                             <div class="product-price">
-                                  $<span class="price">250</span>
+                                $<span class="price">250</span>
                             </div>
                         </a>
                         <a href="#" class="product">
                             <h3>商品</h3>
-                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="pic">
+                                <img src="./img/2022090811305082550127.jpg" alt="">
+                            </div>
                             <div class="product-price">
-                                  $<span class="price">250</span>
+                                $<span class="price">250</span>
+                            </div>
+                        </a>
+                        <a href="#" class="product">
+                            <h3>商品</h3>
+                            <div class="pic">
+                                <img src="./img/2022090811305082550127.jpg" alt="">
+                            </div>
+                            <div class="product-price">
+                                $<span class="price">250</span>
                             </div>
                         </a>
                     </div>
@@ -214,37 +224,47 @@
                     <div class="shop-products">
                         <div class="product">
                             <h3>商品</h3>
-                            <img src="./img/2022090811305082550127.jpg" alt="">
-                            <div class="product-price">
-                                  $<span class="price">250</span>
+                            <div class="pic">
+                                <img src="./img/2022090811305082550127.jpg" alt="">
                             </div>
-                        </div>
-                        <div class="product">
-                            <h3>商品</h3>
-                            <img src="./img/2022090811305082550127.jpg" alt="">
                             <div class="product-price">
                                 $<span class="price">250</span>
                             </div>
                         </div>
                         <div class="product">
                             <h3>商品</h3>
-                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="pic">
+                                <img src="./img/2022090811305082550127.jpg" alt="">
+                            </div>
                             <div class="product-price">
-                                  $<span class="price">250</span>
+                                $<span class="price">250</span>
                             </div>
                         </div>
                         <div class="product">
                             <h3>商品</h3>
-                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="pic">
+                                <img src="./img/2022090811305082550127.jpg" alt="">
+                            </div>
                             <div class="product-price">
-                                  $<span class="price">250</span>
+                                $<span class="price">250</span>
                             </div>
                         </div>
                         <div class="product">
                             <h3>商品</h3>
-                            <img src="./img/2022090811305082550127.jpg" alt="">
+                            <div class="pic">
+                                <img src="./img/2022090811305082550127.jpg" alt="">
+                            </div>
                             <div class="product-price">
-                                  $<span class="price">250</span>
+                                $<span class="price">250</span>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <h3>商品</h3>
+                            <div class="pic">
+                                <img src="./img/2022090811305082550127.jpg" alt="">
+                            </div>
+                            <div class="product-price">
+                                $<span class="price">250</span>
                             </div>
                         </div>
                     </div>
