--- a/CGA/product.html
+++ b/CGA/product.html
@@ -67,34 +67,34 @@
                                     class="fas fa-angle-up"></i></label>
                             <ul class="road-shop-list">
                                 <li>
-                                    <a href="#">長濱一號</a>
+                                    <a href="./product.html">長濱一號</a>
                                 </li>
                                 <li>
-                                    <a href="#">祥銓農創</a>
+                                    <a href="./product.html">祥銓農創</a>
                                 </li>
                                 <li>
-                                    <a href="#">泰源幽谷彌米</a>
+                                    <a href="./product.html">泰源幽谷彌米</a>
                                 </li>
                                 <li>
-                                    <a href="#">柚子藝術工坊</a>
+                                    <a href="./product.html">柚子藝術工坊</a>
                                 </li>
                                 <li>
-                                    <a href="#">頑菓子農場</a>
+                                    <a href="./product.html">頑菓子農場</a>
                                 </li>
                                 <li>
-                                    <a href="#">旭海民宿</a>
+                                    <a href="./product.html">旭海民宿</a>
                                 </li>
                                 <li>
-                                    <a href="#">飛行員餐車</a>
+                                    <a href="./product.html">飛行員餐車</a>
                                 </li>
                                 <li>
-                                    <a href="#">佳濱成功旗魚</a>
+                                    <a href="./product.html">佳濱成功旗魚</a>
                                 </li>
                                 <li>
-                                    <a href="#">86水產</a>
+                                    <a href="./product.html">86水產</a>
                                 </li>
                                 <li>
-                                    <a href="#">益頂味肉品</a>
+                                    <a href="./product.html">益頂味肉品</a>
                                 </li>
 
                             </ul>
@@ -163,6 +163,7 @@
                 </ul>
             </div>
             <div class="col-12 col-md-10">
+                <!-- 一個商家 -->
                 <div class="shop">
                     <h2>商家名稱</h2>
                     <div class="shop-banner">
@@ -216,13 +217,14 @@
                         </a>
                     </div>
                 </div>
+                <!-- 一個商家 -->
                 <div class="shop">
                     <h2>商家名稱</h2>
                     <div class="shop-banner">
                         <img src="./img/2022090818042545060187.jpg" alt="">
                     </div>
                     <div class="shop-products">
-                        <div class="product">
+                        <a href="#" class="product">
                             <h3>商品</h3>
                             <div class="pic">
                                 <img src="./img/2022090811305082550127.jpg" alt="">
@@ -230,8 +232,8 @@
                             <div class="product-price">
                                 $<span class="price">250</span>
                             </div>
-                        </div>
-                        <div class="product">
+                        </a>
+                        <a href="#" class="product">
                             <h3>商品</h3>
                             <div class="pic">
                                 <img src="./img/2022090811305082550127.jpg" alt="">
@@ -239,8 +241,8 @@
                             <div class="product-price">
                                 $<span class="price">250</span>
                             </div>
-                        </div>
-                        <div class="product">
+                        </a>
+                        <a href="#" class="product">
                             <h3>商品</h3>
                             <div class="pic">
                                 <img src="./img/2022090811305082550127.jpg" alt="">
@@ -248,8 +250,8 @@
                             <div class="product-price">
                                 $<span class="price">250</span>
                             </div>
-                        </div>
-                        <div class="product">
+                        </a>
+                        <a href="#" class="product">
                             <h3>商品</h3>
                             <div class="pic">
                                 <img src="./img/2022090811305082550127.jpg" alt="">
@@ -257,8 +259,8 @@
                             <div class="product-price">
                                 $<span class="price">250</span>
                             </div>
-                        </div>
-                        <div class="product">
+                        </a>
+                        <a href="#" class="product">
                             <h3>商品</h3>
                             <div class="pic">
                                 <img src="./img/2022090811305082550127.jpg" alt="">
@@ -266,9 +268,10 @@
                             <div class="product-price">
                                 $<span class="price">250</span>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
