--- a/CGA/landscape.html
+++ b/CGA/landscape.html
@@ -128,13 +128,13 @@
             <div class="col-12 text-center">
                 <h2>成廣澳數位共和國，和你一起偽出國！</h2>
             </div>
-            <div class="col-12 col-md-6 main-des">
+            <div class="col-12 col-md-6 main-des order-1">
                 <div class="des">
                     <h3>東部第一商號的舊日風華</h3>
                     <p>串連台東海岸台11線上在地知名的農林漁牧、餐廳、旅宿服務業者，發行數位觀光護照成廣澳數位共和國 Passport！發揚光大台11線的人文歷史以及重興過去繁榮的商業景象，帶你一起體驗長濱、成功、東河的好吃、好玩和山海魅力！</p>
                 </div>
             </div>
-            <div class="col-12 col-md-6 main-pic">
+            <div class="col-12 col-md-6 main-pic order-md-1">
                 <div class="pic">
                     <img src="./img/bn.jpg" alt="成廣澳數位共和國和你一起偽出國">
                 </div>
@@ -162,7 +162,7 @@
             <div class="col-12 text-center">
                 <h2>成廣澳文化地景</h2>
             </div>
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 main-pic">
                 <div class="pic">
                     <img src="./img/culture.jpg" alt="成廣澳文化地景">
                 </div>
