--- a/CGA/landscape.html
+++ b/CGA/landscape.html
@@ -142,25 +142,21 @@
         </div>
     </section>
 
-    <div class="container main-pics">
-        <div class="row">
-            <div class="col-12 col-md-6 mb-3">
+   <section class="container culture">
+       <div class="row">
+            <div class="col-12 text-center">
+                <h2>成廣澳文化地景</h2>
+            </div>
+            
+            <div class="col-12 col-md-6  main-pic mb-3">
                 <div class="pic">
                     <img src="./img/CGA.jpg" alt="">
                 </div>
             </div>
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 main-pic mb-3">
                 <div class="pic">
                     <img src="./img/FHG.jpg" alt="">
                 </div>
-            </div>
-        </div>
-    </div>
-
-   <div class="container culture">
-       <div class="row">
-            <div class="col-12 text-center">
-                <h2>成廣澳文化地景</h2>
             </div>
             <div class="col-12 col-md-6 main-pic">
                 <div class="pic">
@@ -174,7 +170,7 @@
                 </div>
             </div>
        </div>
-   </div>
+   </section>
 
     <footer class="container-fluid main-footer">
         <div class="container">
