--- a/CGA/index.html
+++ b/CGA/index.html
@@ -120,7 +120,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <a href="#">登入/註冊</a>
+                        <a href="./login.html">登入/註冊</a>
                     </div>
                 </div>
             </div>
