--- a/CGA/product.html
+++ b/CGA/product.html
@@ -116,7 +116,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <a href="#">登入/註冊</a>
+                        <a href="./login.html">登入/註冊</a>
                     </div>
                 </div>
             </div>
