--- a/CGA/infomation.html
+++ b/CGA/infomation.html
@@ -128,7 +128,7 @@
             <div class="col-12 col-md-2 ">
                 <ul class="member-function">
                     <li class="active">
-                        <a href="#">會員資訊</a>
+                        <a href="infomation.html">會員資訊</a>
                     </li>
                     <li>
                         <a href="#">修改密碼</a>
