--- a/CGA/landscape.html
+++ b/CGA/landscape.html
@@ -106,7 +106,7 @@
                                     class="fas fa-angle-up"></i></label>
                             <ul class="member-list">
                                 <li>
-                                    <a href="#">會員資訊</a>
+                                    <a href="infomation.html">會員資訊</a>
                                 </li>
                                 <li>
                                     <a href="#">會員集章</a>
