--- a/CGA/login.html
+++ b/CGA/login.html
@@ -143,7 +143,7 @@
                         <a href="#">忘記密碼？</a>
                     </div>
 
-                    <button type="submit" class="btn btn-primary w-100">登入</button>
+                    <button type="submit" class="btn btn-success w-100">登入</button>
 
                     <div class="go-SignOn">
                         還沒註冊會員？<a href="#">前往註冊</a>
