--- a/CGA/infomation.html
+++ b/CGA/infomation.html
@@ -131,7 +131,7 @@
                         <a href="infomation.html">會員資訊</a>
                     </li>
                     <li>
-                        <a href="#">修改密碼</a>
+                        <a href="changepassword.html">修改密碼</a>
                     </li>
                     <li>
                         <a href="#">會員集章</a>
