--- a/CGA/infomation.html
+++ b/CGA/infomation.html
@@ -134,7 +134,7 @@
                         <a href="changepassword.html">修改密碼</a>
                     </li>
                     <li>
-                        <a href="#">會員集章</a>
+                        <a href="points.html">會員集章</a>
                     </li>
                    
                 </ul>
