--- a/CGA/landscape.html
+++ b/CGA/landscape.html
@@ -109,7 +109,7 @@
                                     <a href="infomation.html">會員資訊</a>
                                 </li>
                                 <li>
-                                    <a href="#">會員集章</a>
+                                    <a href="points.html">會員集章</a>
                                 </li>
                                 <li>
                                     <a href="#">登出</a>
