--- a/CGA/setting.html
+++ b/CGA/setting.html
@@ -109,7 +109,7 @@
                                     <a href="./infomation.html">會員資訊</a>
                                 </li>
                                 <li>
-                                    <a href="#">會員集章</a>
+                                    <a href="points.html">會員集章</a>
                                 </li>
                                 <li>
                                     <a href="#">登出</a>
@@ -134,7 +134,7 @@
                         <a href="changepassword.html">修改密碼</a>
                     </li>
                     <li>
-                        <a href="#">會員集章</a>
+                        <a href="points.html">會員集章</a>
                     </li>
 
                 </ul>
