--- a/CGA/changePassword.html
+++ b/CGA/changePassword.html
@@ -106,10 +106,10 @@
                                     class="fas fa-angle-up"></i></label>
                             <ul class="member-list">
                                 <li>
-                                    <a href="#">會員資訊</a>
+                                    <a href="infomation.html">會員資訊</a>
                                 </li>
                                 <li>
-                                    <a href="#">會員集章</a>
+                                    <a href="points.html">會員集章</a>
                                 </li>
                                 <li>
                                     <a href="#">登出</a>
@@ -134,7 +134,7 @@
                         <a href="changepassword.html">修改密碼</a>
                     </li>
                     <li>
-                        <a href="#">會員集章</a>
+                        <a href="points.html">會員集章</a>
                     </li>
 
                 </ul>
@@ -145,7 +145,7 @@
                         <label for="account" class="form-label">舊密碼</label>
                         <div class="input-pas">
                             <input type="password" class="form-control" id="old-password">
-                            <i class="fas  fa-eye"></i>
+                            <i class="fas  fa-eye-slash"></i>
                         </div>
 
                     </div>
@@ -153,14 +153,14 @@
                         <label for="password" class="form-label">新密碼</label>
                         <div class="input-pas">
                             <input type="password" class="form-control" id="new-password">
-                            <i class="fas  fa-eye"></i>
+                            <i class="fas  fa-eye-slash"></i>
                         </div>
                     </div>
                     <div class="mb-3 password">
                         <label for="password" class="form-label">確認新密碼</label>
                         <div class="input-pas">
                             <input type="password" class="form-control" id="check-password">
-                            <i class="fas  fa-eye"></i>
+                            <i class="fas  fa-eye-slash"></i>
                         </div>
 
                     </div>
