--- a/CGA/index.html
+++ b/CGA/index.html
@@ -113,7 +113,7 @@
                                     <a href="infomation.html">會員資訊</a>
                                 </li>
                                 <li>
-                                    <a href="#">會員集章</a>
+                                    <a href="points.html">會員集章</a>
                                 </li>
                                 <li>
                                     <a href="#">登出</a>
