--- a/CGA/changePassword.html
+++ b/CGA/changePassword.html
@@ -131,7 +131,7 @@
                         <a href="infomation.html">會員資訊</a>
                     </li>
                     <li>
-                        <a href="changepassword.html">修改密碼</a>
+                        <a href="changePassword.html">修改密碼</a>
                     </li>
                     <li>
                         <a href="points.html">會員集章</a>
