--- a/CGA/setting.html
+++ b/CGA/setting.html
@@ -159,7 +159,7 @@
                         <li>
                             <div class="label">手機號碼<sup>*</sup></div>
                             <div class="txt">
-                                <input type="number" class="form-control w-100" id="name" placeholder="請輸入手機號碼"
+                                <input type="tel" class="form-control w-100" id="name" placeholder="請輸入手機號碼"
                                     value="0919441798">
                             </div>
                         </li>
