--- a/TaiwanBuy/index.html
+++ b/TaiwanBuy/index.html
@@ -169,7 +169,8 @@
 
             <div class="copyright">
                 <h3>
-                    Copyright &copy 2022 <span>成廣澳數位共和國</span> All Rights Reserved.
+                    Copyright © 2022 <span>宇善台東朗</span> All Rights Reserved.
+                  
                 </h3>
             </div>
         </div>
